Add Almarai Font and Enhance Intro View UI
- Added Almarai-Bold and Almarai-Regular fonts to the assets.
- Updated the IntroView to include a gradient background for better visual appeal.
- Increased padding in IntroViewBody for better spacing.
- Modified CustomTextButton to accept minimumSize parameter for consistent button sizing.
- Changed app locale to Arabic and updated the app title to reflect the local language.
- Configured pubspec.yaml to support Almarai font family for both regular and bold weights.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,11 @@ flutter:
         - asset: assets/fonts/Scheherazade-Regular.ttf
         - asset: assets/fonts/Scheherazade-Bold.ttf
           weight: 700
+    - family: Almarai
+      fonts:
+        - asset: assets/fonts/Almarai-Regular.ttf
+        - asset: assets/fonts/Almarai-Bold.ttf
+          weight: 700
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
