--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  adhan: ^2.0.0+1
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
@@ -36,6 +37,7 @@ dependencies:
     sdk: flutter
   flutter_svg: ^2.0.10+1
   font_awesome_flutter: ^10.7.0
+  geolocator: ^13.0.1
   get_it: ^7.7.0
   intl: ^0.19.0
   rename: ^3.0.2
