--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
+  flutter_bounceable: ^1.1.0
   flutter_localizations:
     sdk: flutter
   flutter_svg: ^2.0.10+1
