``` Remove Flutter Qiblah and Add Flutter Compass for Qiblah Direction
- Replaced the Flutter Qiblah package with Flutter Compass for more accurate and reliable Qiblah direction tracking.
- Updated the Qiblah compass widget to use Flutter Compass for real-time heading updates.
- Implemented a new QiblahCubit to manage the state of Qiblah direction and compass heading.
- Updated the QiblahView to use the new QiblahCubit for state management.
- Removed unused assets and dependencies related to the old Flutter Qiblah package.
- Added new assets for the compass shape and Kaaba icon.
- Updated the pubspec.yaml to reflect the new dependencies and removed the old Flutter Qiblah dependency.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,8 @@ dependencies:
   flutter_bounceable: ^1.1.0
   flutter_localizations:
     sdk: flutter
-  flutter_qiblah:
-    git: https://github.com/nafiskabbo/flutter_qiblah_v2.git
+  flutter_compass:
+    git: https://github.com/helpisdev/flutter_compass.git
   flutter_svg: ^2.0.10+1
   font_awesome_flutter: ^10.7.0
   geolocator: ^13.0.1
