Add video player view and dependencies
- Added a new video player view to the about religion feature
- Added flutter_inappwebview dependency for displaying YouTube videos
- Added js dependency for flutter_inappwebview
- Updated onGenerateRoutes function to handle the new video player view
- Added a custom snackbar function for displaying error messages
- Updated the GeneratedPluginRegistrant file to include flutter_inappwebview_macos
- Updated the pubspec.lock file with the new dependencies

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_bounceable: ^1.1.0
   flutter_compass:
     git: https://github.com/helpisdev/flutter_compass.git
+  flutter_inappwebview: ^6.0.0
   flutter_localizations:
     sdk: flutter
   flutter_svg: ^2.0.10+1
