--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   intl: ^0.19.0
   rename: ^3.0.2
   shared_preferences: ^2.3.1
+  skeletonizer: ^1.4.2
   url_launcher: ^6.3.0
 
 dev_dependencies:
