--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   geolocator: ^13.0.1
   get_it: ^7.7.0
+  hadith: ^1.0.0
   intl: ^0.19.0
   rename: ^3.0.2
   share_plus: ^10.0.2
