--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   shared_preferences: ^2.3.1
   skeletonizer: ^1.4.2
   url_launcher: ^6.3.0
+  vibration: ^2.0.0
 
 dev_dependencies:
   flutter_lints: ^4.0.0
