--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   hadith: ^1.0.0
   intl: ^0.19.0
   rename: ^3.0.2
+  searchfield: ^1.1.6
   share_plus: ^10.0.2
   shared_preferences: ^2.3.1
   skeletonizer: ^1.4.2
