--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,10 @@ dependencies:
   flutter_compass:
     git: https://github.com/helpisdev/flutter_compass.git
   flutter_inappwebview: ^6.0.0
+  flutter_launcher_icons: ^0.14.1
   flutter_localizations:
     sdk: flutter
+  flutter_native_splash: ^2.4.1
   flutter_svg: ^2.0.10+1
   font_awesome_flutter: ^10.7.0
   geolocator: ^13.0.1
@@ -108,3 +110,16 @@ flutter_assets:
   filename: app_assets.dart
 flutter_intl:
   enabled: true
+
+flutter_native_splash:
+  color: "#705C42"
+  android_12:
+    color: "#705C42"
+  android: true
+  ios: true
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  remove_alpha_ios: true
+  image_path: "assets/images/app_icon.png"
