Update app and bundle identifiers and labels to reflect new app name
Changed the app and bundle identifiers and labels to reflect the new app name "Elkomy". The new identifiers and labels were updated in the AndroidManifest.xml, build.gradle, project.pbxproj, and Info.plist files.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,11 +1,11 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.example.fazakir">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.fazakir.elkomy">
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <application
-        android:label="fazakir"
+        android:label="فذكر"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
