Some tips for reduce size of app
This commit adds support for legacy packaging and native library extraction
in the Android build configuration. The `useLegacyPackaging` option is set to
true and `extractNativeLibs` is set to true in the `packagingOptions` and
`application` sections respectively.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -6,6 +6,11 @@ plugins {
 }
 
 android {
+    packagingOptions { 
+        jniLibs { 
+            useLegacyPackaging true 
+        } 
+    }
     namespace = "com.fazakir.elkomy"
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
