--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   get_it: ^7.7.0
   hadith: ^1.0.0
   intl: ^0.19.0
+  isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
+  path_provider: ^2.1.4
   rename: ^3.0.2
   searchfield: ^1.1.6
   share_plus: ^10.0.2
@@ -56,10 +59,15 @@ dependencies:
   url_launcher: ^6.3.0
   vibration: ^2.0.0
 
+dependency_overrides:
+  analyzer: ^6.3.0
+
 dev_dependencies:
+  build_runner: ^2.4.12
   flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
+  isar_generator: ^3.1.0+1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
