--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,10 +2,30 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 	<dict>
+		<key>UIBackgroundModes</key>
+		<array>
+		    <string>fetch</string>
+		    <string>processing</string>
+		</array>
+		
+		<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+		<string>We need to show notifications for Zikr.</string>
+		
+		<key>NSLocationWhenInUseUsageDescription</key>
+		<string>We need your location to show relevant Zikr notifications.</string>
+		
+		<key>NSUserTrackingUsageDescription</key>
+		<string>This identifier will be used to send you personalized notifications and content.</string>
+		
+		<key>NSAppTransportSecurity</key>
+		<dict>
+		    <key>NSAllowsArbitraryLoads</key>
+		    <true/>
+		</dict>
 		<key>CFBundleDevelopmentRegion</key>
 		<string>$(DEVELOPMENT_LANGUAGE)</string>
 		<key>CFBundleDisplayName</key>
-	<string>فذكر</string>
+		<string>فذكر</string>
 		<key>CFBundleExecutable</key>
 		<string>$(EXECUTABLE_NAME)</string>
 		<key>CFBundleIdentifier</key>
@@ -13,7 +33,7 @@
 		<key>CFBundleInfoDictionaryVersion</key>
 		<string>6.0</string>
 		<key>CFBundleName</key>
-	<string>فذكر</string>
+		<string>فذكر</string>
 		<key>CFBundlePackageType</key>
 		<string>APPL</string>
 		<key>CFBundleShortVersionString</key>
