--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,6 +3,13 @@ allprojects {
         google()
         mavenCentral()
     }
+       configurations.all {
+        resolutionStrategy.eachDependency { details ->
+            if (details.requested.group == 'androidx.appcompat') {
+                details.useVersion "1.6.1"  
+            }
+        }
+    }
 }
 
 rootProject.buildDir = "../build"
