feat: Add Android intent and notification channel to notifications service
This commit adds the `android_intent_plus` and `android_notification_channel` packages to the `NotificationService` class in order to request notification permissions and auto-start permission. It also updates the `showAzkarNotification` and `scheduleAzkarNotification` methods to use the new notification channel and adds a new `callbackShowAzkarNotification` method to handle the periodic showing of notifications. Finally, the commit updates the `pubspec.yaml` file to include the new dependencies.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   adhan: ^2.0.0+1
   android_alarm_manager_plus: ^4.0.4
+  android_intent_plus: ^5.1.0
   cached_network_image: ^3.4.1
   cupertino_icons: ^1.0.8
   flutter:
