change ndkVer. to "26.2.11394342" in \app\build.gradle

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -13,7 +13,7 @@ android {
     }
     namespace = "com.fazakir.elkomy"
     compileSdk = flutter.compileSdkVersion
-    ndkVersion = flutter.ndkVersion
+    ndkVersion = "26.2.11394342"
 
     compileOptions {
         coreLibraryDesugaringEnabled true
