--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,11 +40,9 @@ dependencies:
   flutter_compass:
     git: https://github.com/helpisdev/flutter_compass.git
   flutter_inappwebview: ^6.0.0
-  flutter_launcher_icons: ^0.14.1
   flutter_local_notifications: ^17.2.3
   flutter_localizations:
     sdk: flutter
-  flutter_native_splash: ^2.4.1
   flutter_svg: ^2.0.10+1
   font_awesome_flutter: ^10.7.0
   geolocator: ^13.0.1
@@ -66,6 +64,8 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.4.12
+  flutter_launcher_icons:
+  flutter_native_splash:
   flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
@@ -126,8 +126,10 @@ flutter_native_splash:
   android: true
   ios: true
 
-flutter_launcher_icons:
-  android: "launcher_icon"
+flutter_icons:
   ios: true
-  remove_alpha_ios: true
-  image_path: "assets/images/app_icon.png"
+  android: true
+  image_path_ios: "assets/images/launcher/icon.png"
+  image_path_android: "assets/images/launcher/icon.png"
+  adaptive_icon_background: "#ff1e201e"
+  adaptive_icon_foreground: "assets/images/launcher/foreground.png"
