--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   flutter_local_notifications: ^17.2.3
   flutter_localizations:
     sdk: flutter
+  flutter_quran:
+    path: ./flutter_quran
   flutter_svg: ^2.0.10+1
   font_awesome_flutter: ^10.7.0
   geolocator: ^13.0.1
@@ -64,9 +66,9 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.4.12
-  flutter_launcher_icons:
-  flutter_native_splash:
+  flutter_launcher_icons: null
   flutter_lints: ^4.0.0
+  flutter_native_splash: null
   flutter_test:
     sdk: flutter
   objectbox_generator: any
