create quran page and some related

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,7 +63,8 @@ dependencies:
   timezone: ^0.9.4
   url_launcher: ^6.3.0
   vibration: ^2.0.0
-
+  string_validator: 
+  easy_container: 
 dev_dependencies:
   build_runner: ^2.4.12
   flutter_launcher_icons: null
