--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   android_intent_plus: ^5.1.0
   cached_network_image: ^3.4.1
   cupertino_icons: ^1.0.8
+  dartarabic: ^0.1.2
+  easy_container: null
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
@@ -43,8 +45,6 @@ dependencies:
   flutter_local_notifications: ^17.2.3
   flutter_localizations:
     sdk: flutter
-  quran: 
-    path: ./quran-1.2.2 
   flutter_svg: ^2.0.10+1
   font_awesome_flutter: ^10.7.0
   geolocator: ^13.0.1
@@ -55,16 +55,17 @@ dependencies:
   objectbox_flutter_libs: any
   path: ^1.9.0
   path_provider: ^2.1.4
+  quran:
+    path: ./quran-1.2.2
   rename: ^3.0.2
   searchfield: ^1.1.6
   share_plus: ^10.0.2
   shared_preferences: ^2.3.1
   skeletonizer: ^1.4.2
+  string_validator: null
   timezone: ^0.9.4
   url_launcher: ^6.3.0
   vibration: ^2.0.0
-  string_validator: 
-  easy_container: 
 dev_dependencies:
   build_runner: ^2.4.12
   flutter_launcher_icons: null
@@ -102,7 +103,7 @@ flutter:
     - family: arsura
       fonts:
         - asset: assets\fonts\arsura.ttf
-        
+
     - family: QCF_P001
       fonts:
         - asset: assets\fonts\QCF2BSMLfonts\QCF2001.TTF
@@ -112,7 +113,7 @@ flutter:
 
     - family: QCF_P002
       fonts:
-          - asset: assets\fonts\QCF2BSMLfonts\QCF2002.ttf
+        - asset: assets\fonts\QCF2BSMLfonts\QCF2002.ttf
 
     - family: QCF_P003
       fonts:
