--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   timezone: ^0.9.4
   url_launcher: ^6.3.0
   vibration: ^2.0.0
+  wakelock_plus: ^1.2.8
 dev_dependencies:
   build_runner: ^2.4.12
   flutter_launcher_icons: null
