--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   path_provider: ^2.1.4
   quran:
     path: ./quran-1.2.2
+  flutter_quran:
+    path: ./flutter_quran
   rename: ^3.0.2
   searchfield: ^1.1.6
   share_plus: ^10.0.2
