--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_svg: ^2.0.10+1
+  fluttertoast: ^8.2.8
   font_awesome_flutter: ^10.7.0
   geolocator: ^13.0.1
   get_it: ^8.0.1
@@ -57,8 +58,6 @@ dependencies:
   path_provider: ^2.1.4
   quran:
     path: ./quran-1.2.2
-  flutter_quran:
-    path: ./flutter_quran
   rename: ^3.0.2
   searchfield: ^1.1.7
   share_plus: ^10.1.0
@@ -106,7 +105,7 @@ flutter:
     - family: arsura
       fonts:
         - asset: assets\fonts\arsura.ttf
-    
+
     - family: Amiri
       fonts:
         - asset: assets/fonts/Amiri-Regular.ttf
@@ -118,6 +117,10 @@ flutter:
     - family: arabic_symbols
       fonts:
         - asset: assets/fonts/kfgqpc_arabic_symbols.otf
+
+    - family: hafs
+      fonts:
+        - asset: assets/fonts/hafs.ttf
 
     - family: Almarai
       fonts:
