--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,7 +67,6 @@ dependencies:
   wakelock_plus: ^1.2.8
 dev_dependencies:
   build_runner: ^2.4.13
-  flutter_launcher_icons: 0.14.1
   flutter_lints: ^5.0.0
   flutter_native_splash: 2.4.2
   rename: ^3.0.2
@@ -134,15 +133,9 @@ flutter_intl:
 
 flutter_native_splash:
   color: "#705C42"
+  image: null
   android_12:
     color: "#705C42"
+    image: null
   android: true
   ios: true
-
-flutter_icons:
-  ios: true
-  android: true
-  image_path_ios: "assets/images/launcher/icon.png"
-  image_path_android: "assets/images/launcher/icon.png"
-  adaptive_icon_background: "#ff1e201e"
-  adaptive_icon_foreground: "assets/images/launcher/foreground.png"
